Add Public UDP URL

--- a/Pilot1/Notebooks/Emergence_detection_service.ipynb
+++ b/Pilot1/Notebooks/Emergence_detection_service.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "49ce3159",
+   "id": "61706ea3",
    "metadata": {},
    "source": [
     "### Installing openEO client libraries\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7fa5e952",
+   "id": "387764b8",
    "metadata": {},
    "outputs": [
     {
@@ -24,21 +24,21 @@
      "output_type": "stream",
      "text": [
       "Looking in indexes: https://artifactory.vgt.vito.be/api/pypi/python-packages/simple\n",
-      "Requirement already satisfied: openeo in /home/bontek/.local/lib/python3.6/site-packages (0.4.9)\n",
-      "Requirement already satisfied: requests in /home/bontek/.local/lib/python3.6/site-packages (from openeo) (2.26.0)\n",
-      "Requirement already satisfied: deprecated in /usr/local/lib64/python3.6/site-packages (from openeo) (1.2.13)\n",
+      "Requirement already satisfied: openeo in /home/bontek/.local/lib/python3.6/site-packages (0.9.2)\n",
       "Requirement already satisfied: pandas>0.20.0; python_version >= \"3.5.3\" in /usr/local/lib64/python3.6/site-packages (from openeo) (0.25.1)\n",
       "Requirement already satisfied: numpy>=1.17.0 in /usr/local/lib64/python3.6/site-packages (from openeo) (1.17.1)\n",
+      "Requirement already satisfied: requests>=2.26.0 in /home/bontek/.local/lib/python3.6/site-packages (from openeo) (2.26.0)\n",
       "Requirement already satisfied: shapely>=1.6.4 in /usr/local/lib64/python3.6/site-packages (from openeo) (1.6.4.post2)\n",
-      "Requirement already satisfied: requests-mock in /home/bontek/.local/lib/python3.6/site-packages (from openeo) (1.9.3)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/site-packages (from requests->openeo) (2019.6.16)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/bontek/.local/lib/python3.6/site-packages (from requests->openeo) (1.26.7)\n",
-      "Requirement already satisfied: idna<4,>=2.5; python_version >= \"3\" in /usr/local/lib/python3.6/site-packages (from requests->openeo) (2.8)\n",
-      "Requirement already satisfied: charset-normalizer~=2.0.0; python_version >= \"3\" in /home/bontek/.local/lib/python3.6/site-packages (from requests->openeo) (2.0.9)\n",
-      "Requirement already satisfied: wrapt<2,>=1.10 in /usr/local/lib64/python3.6/site-packages (from deprecated->openeo) (1.11.2)\n",
+      "Requirement already satisfied: xarray>=0.12.3 in /usr/local/lib/python3.6/site-packages (from openeo) (0.12.3)\n",
+      "Requirement already satisfied: deprecated>=1.2.12 in /usr/local/lib64/python3.6/site-packages (from openeo) (1.2.13)\n",
       "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/site-packages (from pandas>0.20.0; python_version >= \"3.5.3\"->openeo) (2019.2)\n",
       "Requirement already satisfied: python-dateutil>=2.6.1 in /home/bontek/.local/lib/python3.6/site-packages (from pandas>0.20.0; python_version >= \"3.5.3\"->openeo) (2.7.5)\n",
-      "Requirement already satisfied: six in /usr/local/lib/python3.6/site-packages (from requests-mock->openeo) (1.12.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5; python_version >= \"3\" in /usr/local/lib/python3.6/site-packages (from requests>=2.26.0->openeo) (2.8)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/bontek/.local/lib/python3.6/site-packages (from requests>=2.26.0->openeo) (1.26.7)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0; python_version >= \"3\" in /home/bontek/.local/lib/python3.6/site-packages (from requests>=2.26.0->openeo) (2.0.9)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/site-packages (from requests>=2.26.0->openeo) (2019.6.16)\n",
+      "Requirement already satisfied: wrapt<2,>=1.10 in /usr/local/lib64/python3.6/site-packages (from deprecated>=1.2.12->openeo) (1.11.2)\n",
+      "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/site-packages (from python-dateutil>=2.6.1->pandas>0.20.0; python_version >= \"3.5.3\"->openeo) (1.12.0)\n",
       "\u001b[33mWARNING: You are using pip version 19.3.1; however, version 21.3.1 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
      ]
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ef4c18b4",
+   "id": "d6816fec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41259dd8",
+   "id": "05f90a7d",
    "metadata": {},
    "source": [
     "### Create openeo session"
@@ -75,13 +75,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "746c2cec",
+   "id": "ea4389f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Connection to 'http://openeo-dev.vgt.vito.be/openeo/1.0.0' with BearerAuth>"
+       "<Connection to 'https://openeo.vito.be/openeo/1.0.0' with BearerAuth>"
       ]
      },
      "execution_count": 3,
@@ -90,7 +90,7 @@
     }
    ],
    "source": [
-    "endpoint = os.environ.get(\"ENDPOINT\", \"http://openeo-dev.vgt.vito.be\")\n",
+    "endpoint = os.environ.get(\"ENDPOINT\", \"https://openeo.vito.be\")\n",
     "openeo_url = \"{e}/openeo/{v}\".format(e=endpoint, v=\"1.0.0\")\n",
     "openeo_user= os.environ.get('OPENEO_USER', os.environ['USER'])  #  your Terrascope username\n",
     "openeo_pass= os.environ.get('OPENEO_PASS', os.environ['USER'] + '123') # replace user with your Terrascope username\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "293e07e0",
+   "id": "0cf573c4",
    "metadata": {},
    "source": [
     "### Description on how to use the emergence detection service\n",
@@ -139,14 +139,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d44110df",
+   "id": "7557b970",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/bontek/.local/lib/python3.6/site-packages/openeo/metadata.py:219: UserWarning: No cube:dimensions metadata\n",
+      "/home/bontek/.local/lib/python3.6/site-packages/openeo/metadata.py:240: UserWarning: No cube:dimensions metadata\n",
       "  complain(\"No cube:dimensions metadata\")\n"
      ]
     },
@@ -154,18 +154,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:00:00 Job '6d7593ac-74da-43e8-9393-c85f02d3bb9c': queued (progress N/A)\n",
-      "0:00:05.049947 Job '6d7593ac-74da-43e8-9393-c85f02d3bb9c': queued (progress N/A)\n",
-      "0:00:11.385480 Job '6d7593ac-74da-43e8-9393-c85f02d3bb9c': queued (progress N/A)\n",
-      "0:00:19.244012 Job '6d7593ac-74da-43e8-9393-c85f02d3bb9c': queued (progress N/A)\n",
-      "0:00:29.120852 Job '6d7593ac-74da-43e8-9393-c85f02d3bb9c': queued (progress N/A)\n",
-      "0:00:41.379564 Job '6d7593ac-74da-43e8-9393-c85f02d3bb9c': queued (progress N/A)\n",
-      "0:00:56.730983 Job '6d7593ac-74da-43e8-9393-c85f02d3bb9c': queued (progress N/A)\n",
-      "0:01:15.928817 Job '6d7593ac-74da-43e8-9393-c85f02d3bb9c': queued (progress N/A)\n",
-      "0:01:39.833342 Job '6d7593ac-74da-43e8-9393-c85f02d3bb9c': running (progress N/A)\n",
-      "0:02:09.763573 Job '6d7593ac-74da-43e8-9393-c85f02d3bb9c': running (progress N/A)\n",
-      "0:02:47.086440 Job '6d7593ac-74da-43e8-9393-c85f02d3bb9c': running (progress N/A)\n",
-      "0:03:33.798962 Job '6d7593ac-74da-43e8-9393-c85f02d3bb9c': finished (progress N/A)\n"
+      "0:00:00 Job 'f42af82a-21b3-48e6-94db-fdbec27dcab4': send 'start'\n",
+      "0:00:43 Job 'f42af82a-21b3-48e6-94db-fdbec27dcab4': queued (progress N/A)\n",
+      "0:00:49 Job 'f42af82a-21b3-48e6-94db-fdbec27dcab4': queued (progress N/A)\n",
+      "0:00:55 Job 'f42af82a-21b3-48e6-94db-fdbec27dcab4': queued (progress N/A)\n",
+      "0:01:03 Job 'f42af82a-21b3-48e6-94db-fdbec27dcab4': queued (progress N/A)\n",
+      "0:01:13 Job 'f42af82a-21b3-48e6-94db-fdbec27dcab4': queued (progress N/A)\n",
+      "0:01:25 Job 'f42af82a-21b3-48e6-94db-fdbec27dcab4': queued (progress N/A)\n",
+      "0:01:40 Job 'f42af82a-21b3-48e6-94db-fdbec27dcab4': queued (progress N/A)\n",
+      "0:01:59 Job 'f42af82a-21b3-48e6-94db-fdbec27dcab4': queued (progress N/A)\n",
+      "0:02:23 Job 'f42af82a-21b3-48e6-94db-fdbec27dcab4': queued (progress N/A)\n",
+      "0:02:53 Job 'f42af82a-21b3-48e6-94db-fdbec27dcab4': running (progress N/A)\n",
+      "0:03:32 Job 'f42af82a-21b3-48e6-94db-fdbec27dcab4': running (progress N/A)\n",
+      "0:04:18 Job 'f42af82a-21b3-48e6-94db-fdbec27dcab4': running (progress N/A)\n",
+      "0:05:17 Job 'f42af82a-21b3-48e6-94db-fdbec27dcab4': finished (progress N/A)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:17: DeprecationWarning: Call to deprecated method get_result. (Use `RESTJob.get_results` instead.) -- Deprecated since version 0.4.10.\n"
      ]
     }
    ],
@@ -177,7 +186,7 @@
     "gpd_shp = gpd.read_file(geom_path)\n",
     "js_shp = json.loads(gpd_shp.to_json()) # the way the data should be loaded and send to the service     \n",
     "\n",
-    "Emergence_process = session.datacube_from_process(\"Emergence_detection_S1_only\", namespace=\"vito\", date=time_range ,polygon = js_shp) #create the process graph for the service\n",
+    "Emergence_process = session.datacube_from_process(\"Emergence_detection_S1_only\", namespace=\"https://openeo.vito.be/openeo/1.0/processes/u:bontek/Emergence_detection_S1_only\", date=time_range ,polygon = js_shp) #create the process graph for the service\n",
     "\n",
     "\n",
     "#print(Emergence_process.graph)\n",
@@ -196,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c17d4456",
+   "id": "baccd65d",
    "metadata": {},
    "source": [
     "### Store the output result\n",
@@ -206,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6668f313",
+   "id": "c0ee1811",
    "metadata": {},
    "outputs": [
     {
